--- a/mulam/padma-puranam/chaps.tex
+++ b/mulam/padma-puranam/chaps.tex
@@ -415,7 +415,7 @@
 {स तथेति प्रतिज्ञाय देवानां रघुनन्दनः}
 {आरुरोह विमानं तं पुष्पकं हेमभूषितम्}% १००
 
-॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे शूद्रतापसवधो नाम पञ्चत्रिंशोऽध्यायः॥३५॥
+{॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे शूद्रतापसवधो नाम पञ्चत्रिंशोऽध्यायः॥३५॥}
 
 \sect{षट्त्रिंशोऽध्यायः 1.36}
 
@@ -949,7 +949,7 @@
 {तस्मिन्निमित्ते काकुत्स्थ दत्तमद्भुतकर्मणा}
 {श्वेतो वैदर्भको राजा तदाभूद्गतकल्मषः}% १३१
 
-॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे रामागस्त्यसंवादो नाम षट्त्रिंशोऽध्यायः॥३६॥
+{॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे रामागस्त्यसंवादो नाम षट्त्रिंशोऽध्यायः॥३६॥}
 
 \sect{सप्तत्रिंशोऽध्यायः 1.37}
 
@@ -1646,7 +1646,7 @@
 \onelineshloka
 {भविष्यति न सन्देहो यथा गङ्गा भगीरथात्}% १७१
 
-॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे यज्ञनिवारणं नाम सप्तत्रिंशोऽध्यायः॥३७॥
+{॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे यज्ञनिवारणं नाम सप्तत्रिंशोऽध्यायः॥३७॥}
 
 \sect{अष्टात्रिंशोऽध्यायः}
 
@@ -2458,7 +2458,7 @@
 {कथयामि तु तत्सर्वं यत्र कौतूहलं नृप}
 {सर्वं ते कीर्त्तयिष्यामि येनार्थी नृपनन्दन}% १९४
 
-॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे वामनप्रतिष्ठानामाष्टत्रिंशोऽध्यायः॥३८॥
+{॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे वामनप्रतिष्ठानामाष्टत्रिंशोऽध्यायः॥३८॥}
 
 
 ===
@@ -2646,7 +2646,7 @@
 {यत्र ग्रामे स्थितो नूनं भरतो भ्रातृवत्सलः}
 {विलापं प्रकरोत्युच्चैस्तं ग्रामं स ददर्श ह}% ४२
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्य भरतावासनन्दिग्रामदर्शनो नाम प्रथमोऽध्यायः॥१॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्य भरतावासनन्दिग्रामदर्शनो नाम प्रथमोऽध्यायः॥१॥}
 
 \sect{द्वितीयोऽध्यायः 5.2}
 
@@ -2816,7 +2816,7 @@
 {विमानवरमारूढास्ते सर्वे नभसोऽङ्गणे}
 {क्षणादालोकयाञ्चक्रे निकटे स्वपितुः पुरीम्}% ४०
 
-॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे रामराजधानीदर्शनो नाम द्वितीयोऽध्यायः॥२॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे रामराजधानीदर्शनो नाम द्वितीयोऽध्यायः॥२॥}
 
 \sect{तृतीयोऽध्यायः 5.3}
 
@@ -2948,7 +2948,7 @@
 {तदा पौराङ्गनाः काश्चिद्गवाक्षबिलमाश्रिताः}
 {रघुनाथस्वरूपेक्षा जातकामा अथाब्रुवन्}% ३०
 
-पौराङ्गना ऊचुः
+\uvacha{पौराङ्गना ऊचुः}
 
 \twolineshloka
 {धन्या अभूवन्बत भिल्लकन्या वनेषु या राममुखारविन्दम्}
@@ -2966,7 +2966,7 @@
 {इति गदितवतीस्ताः स्नेहभारेण रामा नलिनदलसदृक्षैर्नेत्रपातैर्निरीक्ष्य}
 {निखिलगुरुरनूनप्रेमभारं नृलोकं जननिगृहमियेष प्रोषिताङ्गेन हृष्टः}% ३४
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्य पुरप्रवेशनं नाम तृतीयोऽध्यायः॥३॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्य पुरप्रवेशनं नाम तृतीयोऽध्यायः॥३॥}
 
 \sect{चतुर्थोऽध्यायः 5.4}
 
@@ -3197,7 +3197,7 @@
 {धनदो ह्यर्थिनां रामः कारुण्यश्च कृपानिधिः}
 {भ्रातृभिः सहितो नित्यं गुरुदेवस्तुतिं व्यधात्}% ५४
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुवरस्य राज्याभिषेको नाम चतुर्थोऽध्यायः॥४॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुवरस्य राज्याभिषेको नाम चतुर्थोऽध्यायः॥४॥}
 
 \sect{पञ्चमोऽध्यायः 5.5}
 
@@ -3259,7 +3259,7 @@
 {सुरा वृणुत मे यूयं वरं किञ्चित्सुदुर्ल्लभम्}
 {यं कोऽपि देवो दनुजो न यक्षः प्राप सादरः}% १३
 
-सुरा ऊचुः
+\uvacha{सुरा ऊचुः}
 
 \twolineshloka
 {स्वामिन्भगवतः सर्वं प्राप्तमस्माभिरुत्तमम्}
@@ -3413,7 +3413,7 @@
 {स्वागतेन सुसम्भाव्य पप्रच्छ तमनामयम्}
 {सुखोपविष्टं विश्रान्तं बभाषे रघुनन्दनः}% ५०
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे अगस्त्यसमागमो नाम पञ्चमोऽध्यायः॥५॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे अगस्त्यसमागमो नाम पञ्चमोऽध्यायः॥५॥}
 
 \sect{षष्ठोऽध्यायः 5.6}
 
@@ -3599,7 +3599,7 @@
 {कुम्भकर्णोऽपि कृतवान्विभीषणसमन्वितः}
 {रावणेन सहभ्रात्रेत्युक्त्वागाद्गिरिकाननम्}% ४३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रावणोत्पत्तिर्नाम षष्ठोऽध्यायः॥६॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रावणोत्पत्तिर्नाम षष्ठोऽध्यायः॥६॥}
 
 \sect{सप्तमोऽध्यायः 5.7}
 
@@ -3757,7 +3757,7 @@
 {इत्थं निशम्य दितिजेन्द्रकुलानुकारिवार्तां महापुरुष ईश्वरईशिता च}
 {संरुद्धबाष्पगलदश्रुमुखारविन्दो भूमौ पपात सदसि प्रथितप्रभावः}% ३८
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रावणोत्पत्तिविपत्तिकथनन्नामसप्तमोऽध्यायः॥७॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रावणोत्पत्तिविपत्तिकथनन्नामसप्तमोऽध्यायः॥७॥}
 
 \sect{अष्टमोऽध्यायः 5.8}
 
@@ -3921,7 +3921,7 @@
 {इत्युक्तमाकर्ण्य मुनेः स भाग्यवान् रघूत्तमो ब्राह्मणघातभीतः}
 {पप्रच्छ यागे सुमतिं चिकीर्षन्विधिं पुरावित्परिगीयमानः}% ३७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्यागस्त्योपदेशोनामाष्टमोऽध्यायः॥८॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्यागस्त्योपदेशोनामाष्टमोऽध्यायः॥८॥}
 
 \sect{नवमोऽध्यायः 5.9}
 
@@ -4193,7 +4193,7 @@
 {इत्येवमादयो धर्मा गदिता ऋषिभिस्तदा}
 {श्रुता रामेण महता सर्वलोकहितैषिणा}% ६३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सर्वधर्मोपदेशो नाम नवमोऽध्यायः॥९॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सर्वधर्मोपदेशो नाम नवमोऽध्यायः॥९॥}
 
 \sect{दशमोऽध्यायः 5.10}
 
@@ -4510,7 +4510,7 @@
 {परस्त्रियं त्वं करवालवत्त्यजन्भवेर्यशोभूषणभूतिभूमिः}
 {एवं ममादेशमथाचरंश्च लभेः परं धाम सुयोगमीड्यम्}% ७४
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नशिक्षाकथनं नाम दशमोऽध्यायः॥१०॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नशिक्षाकथनं नाम दशमोऽध्यायः॥१०॥}
 
 \sect{एकादशोऽध्यायः 5.11}
 
@@ -4856,7 +4856,7 @@
 {सर्वाः पतिव्रता नार्यो लोपामुद्रादिकाः शुभाः}
 {नावमान्यास्त्वया भीरु स्वतपोबलशोभिताः}% ८३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हयमोचनपुष्कलभार्यासमागमो नाम एकादशोऽध्यायः॥११॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हयमोचनपुष्कलभार्यासमागमो नाम एकादशोऽध्यायः॥११॥}
 
 \sect{द्वादशोऽध्यायः 5.12}
 
@@ -5223,7 +5223,7 @@
 {अत्यद्भुतं जातमहो यद्भवत्योऽक्षिगोचराः}
 {यास्तपोभिः सुदुष्प्राप्यास्ता मे तपस आगताः}% ८६
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कामाक्षोपाख्यानं नाम द्वादशोऽध्यायः॥१२॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कामाक्षोपाख्यानं नाम द्वादशोऽध्यायः॥१२॥}
 
 \sect{त्रयोदशोऽध्यायः 5.13}
 
@@ -5519,7 +5519,7 @@
 {अर्घादिभिः पूजयित्वा रघुनाथानुजं तदा}
 {सर्वं समर्पयामास रामचन्द्राय धीमते}% ६७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नाहिच्छत्रापुरीप्रवेशो नाम त्रयोदशोऽध्यायः॥१३॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नाहिच्छत्रापुरीप्रवेशो नाम त्रयोदशोऽध्यायः॥१३॥}
 
 \sect{चतुर्दशोऽध्यायः 5.14}
 
@@ -5795,7 +5795,7 @@
 {राजा दत्त्वात्मजां तस्मै मुनये तपसान्निधे}
 {प्राप स्वां नगरीं भूयो दुःखितोऽयं दयायुतः}% ६५
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनोपाख्यानं नाम चतुर्दशोऽध्यायः॥१४॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनोपाख्यानं नाम चतुर्दशोऽध्यायः॥१४॥}
 
 \sect{पञ्चदशोऽध्यायः 5.15}
 
@@ -6053,7 +6053,7 @@
 {वैश्रम्भके सुरवने नन्दने पुष्पभद्रके}
 {मानसे चैत्ररथ्ये च सरे मे रामया रतः}% ५४
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनस्य तपोभोगवर्णनं नाम पञ्चदशोऽध्यायः॥१५॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनस्य तपोभोगवर्णनं नाम पञ्चदशोऽध्यायः॥१५॥}
 
 \sect{षोडशोऽध्यायः 5.16}
 
@@ -6284,7 +6284,7 @@
 {स्वामिन्ब्रह्मण्यदेवस्य तव वाडवपूजनम्}
 {युक्तमेव महाराज धर्ममार्गं प्ररक्षितुः}% ५४
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनाश्रमे हयगमनो नाम षोडशोऽध्यायः॥१६॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनाश्रमे हयगमनो नाम षोडशोऽध्यायः॥१६॥}
 
 \sect{सप्तदशोऽध्यायः 5.17}
 
@@ -6626,7 +6626,7 @@
 {परमेकं महच्चित्रं यद्दृष्टं नीलपर्वते}
 {पुरुषोत्तमसान्निध्ये तन्न क्वाप्यक्षिगोचरम्}% ८२
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे ब्राह्मणसमागमो नाम सप्तदशोऽध्यायः॥१७॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे ब्राह्मणसमागमो नाम सप्तदशोऽध्यायः॥१७॥}
 
 \sect{अष्टादशोऽध्यायः 5.18}
 
@@ -6672,7 +6672,7 @@
 {तदा मद्वाक्यमाकर्ण्य कथितं तैर्महात्मभिः}
 {सर्वं तत्र तु यद्वृत्तं चतुर्भुजभवादिकम्}% १०
 
-किराता ऊचुः
+\uvacha{किराता ऊचुः}
 
 \twolineshloka
 {शृणु ब्राह्मण वृत्तान्तमस्माकं पृथुकः शिशुः}
@@ -6756,7 +6756,7 @@
 {भुक्त्वा तत्रान्नसिक्थं तु भव विप्र चतुर्भुजः}
 {त्वया पृष्टं यदाश्चर्यं तदुक्तं वाडवर्षभ}% ३०
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे ब्राह्मणोपदेशोनामाष्टादशोऽध्यायः॥१८॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे ब्राह्मणोपदेशोनामाष्टादशोऽध्यायः॥१८॥}
 
 \sect{ऊनविंशोऽध्यायः 5.19}
 
@@ -7008,7 +7008,7 @@
 {जय देवेश दुःखघ्न पुरुषोत्तमसंज्ञित}
 {दर्शयस्व तनुं मह्यं वदन्तो निर्ययुर्जनाः}% ६०
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रत्नग्रीवस्य तीर्थप्रयाणन्नामैकोनविंशोऽध्यायः॥१९॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रत्नग्रीवस्य तीर्थप्रयाणन्नामैकोनविंशोऽध्यायः॥१९॥}
 
 \sect{विंशोऽध्यायः 5.20}
 
@@ -7328,7 +7328,7 @@
 {तस्मान्नेतुं वयं प्राप्ताः पापिनं पुल्कसं नरम्}
 {भवद्भिर्मोचितः कस्मादकस्मादागतैर्भटैः}% ७८
 
-विष्णुदूता ऊचुः
+\uvacha{विष्णुदूता ऊचुः}
 
 \twolineshloka
 {ब्रह्महत्यादिकं पापं प्राणिकोटिवधोद्भवम्}
@@ -7389,7 +7389,7 @@
 \onelineshloka
 {श्रुत्वा विमुच्यते पापैर्भुक्तिं मुक्तिं च विन्दति}% ९३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे गण्डकीमाहात्म्यं नाम विंशोऽध्यायः॥२०॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे गण्डकीमाहात्म्यं नाम विंशोऽध्यायः॥२०॥}
 
 \sect{एकविंशोऽध्यायः 5.21}
 
@@ -7595,7 +7595,7 @@
 {गायन्हरिं क्षणं तिष्ठन्हसञ्जल्पन्ब्रुवन्नमन्}
 {आनन्दं प्राप सुघनं सर्वसन्तापनाशनम्}% ४८
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सन्न्यासिदर्शनं नाम एकविंशोऽध्यायः॥२१॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सन्न्यासिदर्शनं नाम एकविंशोऽध्यायः॥२१॥}
 
 \sect{द्वाविंशोऽध्यायः 5.22}
 
@@ -7860,7 +7860,7 @@
 {स्तुत्वा नत्वा च देवेशं सुरासुरनमस्कृतम्}
 {जातं कृतार्थमात्मानममन्यत स शत्रुहा}% ६३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे नीलगिरिमहिमवर्णनं नाम द्वाविंशोऽध्यायः॥२२॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे नीलगिरिमहिमवर्णनं नाम द्वाविंशोऽध्यायः॥२२॥}
 
 \sect{त्रयोविंशोऽध्यायः 5.23}
 
@@ -8228,7 +8228,7 @@
 {राजात्मजो जयं प्राप्य प्रतापाग्र्यं विजित्य सः}
 {प्रतीक्षां तु चकारास्य शत्रुघ्नस्य च भूपतेः}% ८८
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे राजपुत्रयुद्धकथनं नाम त्रयोविंशोऽध्यायः॥२३॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे राजपुत्रयुद्धकथनं नाम त्रयोविंशोऽध्यायः॥२३॥}
 
 \sect{चतुर्विंशतितमोऽध्यायः 5.24}
 
@@ -8476,7 +8476,7 @@
 {हर्षं प्राप स शत्रुघ्नो जयिनं वीक्ष्य पुष्कलम्}
 {प्रशशंस सुमत्यादि मन्त्रिभिः परिवारितः}% ६०
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलविजयो नाम चतुर्विंशतितमोऽध्यायः॥२४॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलविजयो नाम चतुर्विंशतितमोऽध्यायः॥२४॥}
 
 \sect{पञ्चविंशोऽध्यायः 5.25}
 
@@ -8624,7 +8624,7 @@
 {राजा दृष्ट्वा सुसन्नद्धं क्रौञ्चव्यूहं सुनिर्मितम्}
 {रणाय स्वमतिं चक्रे शत्रुघ्नकटके स्थितैः}% ३५
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुबाहुसैन्यसमागमो नाम पञ्चविंशोऽध्यायः॥२५॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुबाहुसैन्यसमागमो नाम पञ्चविंशोऽध्यायः॥२५॥}
 
 \sect{षड्विंशतितमोऽध्यायः 5.26}
 
@@ -8918,7 +8918,7 @@
 {तद्दृष्ट्वा विस्मयं प्राप्ताः प्रशशंसुः सहस्रशः}
 {धन्यो लक्ष्मीनिधिर्भूपो धन्यो राजानुजो बली}% ६९
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे गदायुद्धं नाम षड्विंशतितमोऽध्यायः॥२६॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे गदायुद्धं नाम षड्विंशतितमोऽध्यायः॥२६॥}
 
 \sect{सप्तविंशतितमोऽध्यायः 5.27}
 
@@ -9120,7 +9120,7 @@
 {तं वीक्ष्य पतितं वीरः पुष्कलो भरतात्मजः}
 {व्यगाहत व्यूहमिमं सर्ववीरैकशोभितम्}% ४८
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे चित्राङ्गवधो नाम सप्तविंशतितमोऽध्यायः॥२७॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे चित्राङ्गवधो नाम सप्तविंशतितमोऽध्यायः॥२७॥}
 
 \sect{अष्टाविंशतितमोऽध्यायः 5.28}
 
@@ -9428,7 +9428,7 @@
 {रामं दृष्ट्वा कृतार्थः स्यामहं यज्ञेति पुण्यदे}
 {आनयन्तु हयं मह्यं रोचते तु तदर्पणम्}% ७५
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुबाहुपराजयो नाम अष्टाविंशतितमोऽध्यायः॥२८॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुबाहुपराजयो नाम अष्टाविंशतितमोऽध्यायः॥२८॥}
 
 \sect{एकोनत्रिंशत्तमोऽध्यायः 5.29}
 
@@ -9438,7 +9438,7 @@
 {ते तु तातवचः श्रुत्वा हर्षिताः सम्प्रहारिणः}
 {तथेत्यूचुर्महाराजं रामदर्शनलालसम्}% १
 
-पुत्रा ऊचुः
+\uvacha{पुत्रा ऊचुः}
 
 \twolineshloka
 {राजन्भवत्पदाम्भोजान्नान्यं जानीमहे वयम्}
@@ -9658,7 +9658,7 @@
 {केचिद्वासांसि चित्राणि केचिद्राज्यं स्वकं महत्}
 {केचिद्धनं जनं केचिदानीय प्रणमन्ति तम्}% ५३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नस्य सुबाहुना सह निर्याणं नाम एकोनत्रिंशत्तमोऽध्यायः॥२९॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नस्य सुबाहुना सह निर्याणं नाम एकोनत्रिंशत्तमोऽध्यायः॥२९॥}
 
 \sect{त्रिंशोऽध्यायः 5.30}
 
@@ -9998,7 +9998,7 @@
 {ते सर्वे प्रययुर्लोकं दिवं देवैरलङ्कृतम्}
 {जनकं तु प्रशंसन्तो महाराजं दयानिधिम्}% ७७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवदाख्याने जनकेन नरकस्थप्राणिमोचनं नाम त्रिंशोऽध्यायः॥३०॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवदाख्याने जनकेन नरकस्थप्राणिमोचनं नाम त्रिंशोऽध्यायः॥३०॥}
 
 \sect{एकत्रिंशोऽध्यायः 5.31}
 
@@ -10246,7 +10246,7 @@
 {तत्राराध्य हृषीकेशं भक्तियुक्तेन चेतसा}
 {निर्धूतपापः सतनुरगाद्धरिपदं नृपः}% ५७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवदाख्याने धेनुव्रतवर्णनं नाम एकत्रिंशोऽध्यायः॥३१॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवदाख्याने धेनुव्रतवर्णनं नाम एकत्रिंशोऽध्यायः॥३१॥}
 
 \sect{द्वात्रिंशोऽध्यायः 5.32}
 
@@ -10294,7 +10294,7 @@
 {गतोऽश्वस्तत्पुरान्तस्तु नानाश्चर्यसमन्वितः}
 {तं दृष्ट्वा जनताः सर्वा राज्ञे गत्वा न्यवेदयन्}% १०
 
-जनता ऊचुः
+\uvacha{जनता ऊचुः}
 
 \twolineshloka
 {कोऽप्यश्वः सितवर्णेन गङ्गाजलसमेन वै}
@@ -10360,7 +10360,7 @@
 {हयस्तावद्गतो दूरं वीरैः सुपरिरक्षितः}
 {शत्रुघ्नस्तेन भूपेन ययौ वीरसमन्वितः}% २६
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवत्समागमो नाम द्वात्रिंशोऽध्यायः॥३२॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवत्समागमो नाम द्वात्रिंशोऽध्यायः॥३२॥}
 
 \sect{त्रयस्त्रिंशत्तमोऽध्यायः 5.33}
 
@@ -10626,7 +10626,7 @@
 {इत्युक्त्वा ते महावीराः सज्जीभूता रणाङ्गणे}
 {प्रतिज्ञां स्वामृतां कर्तुं ययुस्ते राक्षसं मुदा}% ६३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरप्रतिज्ञाकथनं नाम त्रयस्त्रिंशत्तमोऽध्यायः॥३३॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरप्रतिज्ञाकथनं नाम त्रयस्त्रिंशत्तमोऽध्यायः॥३३॥}
 
 \sect{चतुस्त्रिंशत्तमोऽध्यायः 5.34}
 
@@ -10960,7 +10960,7 @@
 {ततो वीणानिनादाश्च शङ्खनादाः समन्ततः}
 {श्रूयन्ते शूरवीराणां जयनादा मनोहराः}% ८१
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे विद्युन्मालिनामराक्षसपराजयो नाम चतुस्त्रिंशत्तमोऽध्यायः॥३४॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे विद्युन्मालिनामराक्षसपराजयो नाम चतुस्त्रिंशत्तमोऽध्यायः॥३४॥}
 
 \sect{पञ्चत्रिंशत्तमोऽध्यायः 5.35}
 
@@ -10986,7 +10986,7 @@
 {सन्नद्धास्ते महावीरा रथस्था विमलाङ्गकाः}
 {राजानमूचुस्ते सर्वे जयलक्ष्म्या समन्विताः}% ५
 
-वीरा ऊचुः
+\uvacha{वीरा ऊचुः}
 
 \twolineshloka
 {दिष्ट्या हतस्त्वया दैत्यो विद्युन्माली महामते}
@@ -11264,7 +11264,7 @@
 {त्वया पृष्टं महाराज रामस्य ध्यानमुत्तमम्}
 {तत्ते कथितमेतद्वै संसारजलधिं तर}% ७१
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे आरण्यको पाख्याने लोमशारण्यकसंवादो नाम पञ्चत्रिंशत्तमोऽध्यायः॥३५॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे आरण्यको पाख्याने लोमशारण्यकसंवादो नाम पञ्चत्रिंशत्तमोऽध्यायः॥३५॥}
 
 \sect{षट्त्रिंशत्तमोऽध्यायः 5.36}
 
@@ -11646,7 +11646,7 @@
 {इति वाक्यं समाकर्ण्य मुनेर्विस्मयमागताः}
 {रघुनाथं स्मरन्तस्ते प्रोचुरारण्यकं मुनिम्}% ९३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लोमशारण्यकसंवादे रामचरित्रकथनं नाम षट्त्रिंशत्तमोऽध्यायः॥३६॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लोमशारण्यकसंवादे रामचरित्रकथनं नाम षट्त्रिंशत्तमोऽध्यायः॥३६॥}
 
 \sect{सप्तत्रिंशत्तमोऽध्यायः 5.37}
 
@@ -11656,7 +11656,7 @@
 {ते पृष्टा मुनिवर्येण रामचारित्रमद्भुतम्}
 {धन्यं सभाग्यं मन्वानाः प्रोचुरात्मानमादरात्}% १
 
-जना ऊचुः
+\uvacha{जना ऊचुः}
 
 \twolineshloka
 {पवित्रिता वयं सर्वे दर्शनेन तवाधुना}
@@ -11926,7 +11926,7 @@
 {मुनयोऽप्येतदीक्षित्वा प्रशंसन्तो मुनीश्वरम्}
 {कृतार्थोयं मुनिश्रेष्ठो यद्रामवपुषीक्षितः}% ६७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे आरण्यकमुनेर्विष्णुलोकगमनं नाम सप्तत्रिंशत्तमोऽध्यायः॥३७॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे आरण्यकमुनेर्विष्णुलोकगमनं नाम सप्तत्रिंशत्तमोऽध्यायः॥३७॥}
 
 \sect{अष्टत्रिंशत्तमोऽध्यायः 5.38}
 
@@ -12008,7 +12008,7 @@
 {इति वाक्यं समाकर्ण्य राज्ञो रघुवरस्य हि}
 {कथयामासुस्ते सर्वं वीराः शूरशिरोमणिम्}% १७
 
-जना ऊचुः
+\uvacha{जना ऊचुः}
 
 \twolineshloka
 {स्वामिन्वयं न जानीमो मुहूर्तमभवज्जले}
@@ -12200,7 +12200,7 @@
 {हनूमान्कथयामास हयस्यागमनं महत्}
 {वरप्राप्तिं च ताभ्यो वै तेऽपि श्रुत्वा मुदं गताः}% ६३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नस्य योगिनीदर्शनजलमध्याद्वाहप्राप्तिर्नाम अष्टत्रिंशत्तमोऽध्यायः॥३८॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नस्य योगिनीदर्शनजलमध्याद्वाहप्राप्तिर्नाम अष्टत्रिंशत्तमोऽध्यायः॥३८॥}
 
 \sect{एकोनचत्वारिंशत्तमोऽध्यायः 5.39}
 
@@ -12304,7 +12304,7 @@
 {दन्तव्रजप्रमितहास्यसुशोभिवक्त्राः}
 {कामस्य बाणनयनादिविमोहनाभाः}% २३
 
-स्त्रिय ऊचुः
+\uvacha{स्त्रिय ऊचुः}
 
 \twolineshloka
 {कान्तकोयं महानर्वास्वर्णपत्रैकशोभितः}
@@ -12450,7 +12450,7 @@
 {एतद्वचः परं श्रुत्वा चन्द्रचूडस्य भूमिपः}
 {जहर्ष मानसेऽत्यन्तं युद्धकर्मणि कौतुकी}% ५६
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणिपुत्रेण हयग्रहणं नाम एकोनचत्वारिंशत्तमोऽध्यायः॥३९॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणिपुत्रेण हयग्रहणं नाम एकोनचत्वारिंशत्तमोऽध्यायः॥३९॥}
 
 \sect{चत्वारिंशत्तमोऽध्यायः 5.40}
 
@@ -12706,7 +12706,7 @@
 {जयार्थं राघवस्यैव श्रुत्वा ते रणकोविदाः}
 {महोत्साहेन संयुक्ता ययुर्योद्धुं तु सैनिकैः}% ५७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणिना सह युद्धनिश्चयो नाम चत्वारिंशत्तमोऽध्यायः॥४०॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणिना सह युद्धनिश्चयो नाम चत्वारिंशत्तमोऽध्यायः॥४०॥}
 
 \sect{एकचत्वारिंशत्तमोऽध्यायः 5.41}
 
@@ -12846,7 +12846,7 @@
 {चापं महद्दधानः स इषुधी अक्षयावपि}
 {रोषान्निःश्वासमामुञ्चन्नाह्वयामास वैरिणम्}% ३३
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रुक्माङ्गदपराजय पुष्कलविजयो नाम एकचत्वारिंशत्तमोऽध्यायः॥४१॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रुक्माङ्गदपराजय पुष्कलविजयो नाम एकचत्वारिंशत्तमोऽध्यायः॥४१॥}
 
 \sect{द्विचत्वारिंशत्तमोऽध्यायः 5.42}
 
@@ -13186,7 +13186,7 @@
 {ततो हाहाकृतं सर्वं पलायनपरायणम्}
 {राज्ञि सम्मूर्च्छिते जाते पुष्कलो जयमाप्तवान्}% ७८
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणेः पराभवो नाम द्विचत्वारिंशत्तमोऽध्यायः॥४२॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणेः पराभवो नाम द्विचत्वारिंशत्तमोऽध्यायः॥४२॥}
 
 \sect{त्रिचत्वारिंशत्तमोऽध्यायः 5.43}
 
@@ -13442,7 +13442,7 @@
 {श्रीरामस्मरणं योधान्स्वीयान्विप्र प्रहर्षितान्}
 {प्रकुर्वन्रोषितस्तीव्रं लाङ्गूलं च प्रकम्पयन्}% ६२
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलशत्रुघ्नपराजयो नाम त्रिचत्वारिंशत्तमोऽध्यायः॥४३॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलशत्रुघ्नपराजयो नाम त्रिचत्वारिंशत्तमोऽध्यायः॥४३॥}
 
 \sect{चतुश्चत्वारिंशत्तमोऽध्यायः 5.44}
 
@@ -13786,7 +13786,7 @@
 {नायं वर्षशतैर्जेयो भवता बलसंयुतः}
 {तस्मात्प्रसादय कपिं देहि तत्रत्यमौषधम्}% ८०
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे द्रोणगिरौ देवानां पराजयो नाम चतुश्चत्वारिंशत्तमोऽध्यायः॥४४॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे द्रोणगिरौ देवानां पराजयो नाम चतुश्चत्वारिंशत्तमोऽध्यायः॥४४॥}
 
 \sect{पञ्चचत्वारिंशत्तमोऽध्यायः 5.45}
 
@@ -14040,7 +14040,7 @@
 {मृगशृङ्गं कटौ धृत्वा दीक्षितं वपुरुद्वहन्}
 {तं दृष्ट्वा विस्मयं प्राप शत्रुघ्नः समराङ्गणे}% ६०
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे श्रीरामसमागमो नाम पञ्चचत्वारिंशत्तमोऽध्यायः॥४५॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे श्रीरामसमागमो नाम पञ्चचत्वारिंशत्तमोऽध्यायः॥४५॥}
 
 \sect{षट्चत्वारिंशत्तमोऽध्यायः 5.46}
 
@@ -14206,7 +14206,7 @@
 {एतद्रामस्य चरितं ये शृण्वन्ति नरोत्तमाः}
 {तेषां संसारजं दुःखं न भविष्यति कर्हिचित्}% ३८
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हयप्रस्थानं नाम षट्चत्वारिंशत्तमोऽध्यायः॥४६॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हयप्रस्थानं नाम षट्चत्वारिंशत्तमोऽध्यायः॥४६॥}
 
 \sect{सप्तचत्वारिंशत्तमोऽध्यायः 5.47}
 
@@ -14446,7 +14446,7 @@
 {स प्रोक्तो मुनिभिर्देवो राक्षसत्वमितः प्रभो}
 {स्तम्भयामास रामाश्वं मोचयानघकीर्तनैः}% ५५
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शापकीर्तनं नाम सप्तचत्वारिंशत्तमोऽध्यायः॥४७॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शापकीर्तनं नाम सप्तचत्वारिंशत्तमोऽध्यायः॥४७॥}
 
 \sect{अष्टचत्वारिंशत्तमोऽध्यायः 5.48}
 
@@ -14766,7 +14766,7 @@
 {ततो वाहो विनिर्मुक्तो गात्रस्तम्भाच्च भूतलात्}
 {ययौ तद्विपिनं सर्वं भ्रमन्पक्षिसमाकुलम्}% ७६
 
-॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे हयनिर्मुक्तिर्नामाष्टचत्वारिंशत्तमोऽध्यायः॥४८॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे हयनिर्मुक्तिर्नामाष्टचत्वारिंशत्तमोऽध्यायः॥४८॥}
 
 \sect{एकोनपञ्चाशत्तमोऽध्यायः 5.49}
 
@@ -15053,7 +15053,7 @@
 \onelineshloka
 {सभायां सेवकान्सर्वान्दिशन्नास्ते महीपतिः}% ६९
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथराज्ञा हयग्रहणं नाम एकोनपञ्चाशत्तमोऽध्यायः॥४९॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथराज्ञा हयग्रहणं नाम एकोनपञ्चाशत्तमोऽध्यायः॥४९॥}
 
 \sect{पञ्चाशत्तमोऽध्यायः 5.50}
 
@@ -15311,7 +15311,7 @@
 {इति श्रुत्वास्मि तं कृत्वा ययौ वीरो यतो नृपः}
 {गत्वा निवेदयामास यथोक्तं सुरथेन वै}% ५७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथदूतयोः संवादो नाम पञ्चाशत्तमोऽध्यायः॥५०॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथदूतयोः संवादो नाम पञ्चाशत्तमोऽध्यायः॥५०॥}
 
 \sect{एकपञ्चाशत्तमोऽध्यायः 5.51}
 
@@ -15611,7 +15611,7 @@
 {तदा हाहेति वै लोकाश्चुक्रुशुश्चम्पकानुगाः}
 {पुष्कलं मोचयामास बद्धं चम्पकपाशतः}% ७१
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलमोचनं नामैकपञ्चाशत्तमोऽध्यायः॥५१॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलमोचनं नामैकपञ्चाशत्तमोऽध्यायः॥५१॥}
 
 \sect{द्विपञ्चाशत्तमोऽध्यायः 5.52}
 
@@ -15899,7 +15899,7 @@
 {सुरथो जयमापेदे सङ्ग्रामे रामसेवकः}
 {दशवीरा दशसुतैर्मूर्च्छिताः पतिताः क्वचित्}% ६९
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथविजयो नाम द्विपञ्चाशत्तमोऽध्यायः॥५२॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथविजयो नाम द्विपञ्चाशत्तमोऽध्यायः॥५२॥}
 
 \sect{त्रिपञ्चाशत्तमोऽध्यायः 5.53}
 
@@ -16069,7 +16069,7 @@
 {कदाचिज्जाह्नवीतीरे वाल्मीकेराश्रमं वरम्}
 {गतो मुनिवरैर्जुष्टं प्रातर्धूमेन चिह्नितम्}% ३७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथसमागमो नाम त्रिपञ्चाशत्तमोऽध्यायः॥५३॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथसमागमो नाम त्रिपञ्चाशत्तमोऽध्यायः॥५३॥}
 
 \sect{चतुःपञ्चाशत्तमोऽध्यायः 5.54}
 
@@ -16227,7 +16227,7 @@
 {ते छिन्नबाहवः शोकाच्छत्रुघ्नं प्रतिसङ्गताः}
 {पृष्टास्ते जगदुः सर्वे लवात्स्वभुजकृन्तनम्}% ३७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लवेन हयबन्धनं नाम चतुःपञ्चाशत्तमोऽध्यायः॥५४॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लवेन हयबन्धनं नाम चतुःपञ्चाशत्तमोऽध्यायः॥५४॥}
 
 \sect{पञ्चपञ्चाशत्तमोऽध्यायः 5.55}
 
@@ -16559,7 +16559,7 @@
 {इति सम्मन्त्र्य ते गेहं गत्वा सुषुपुरुत्सुकाः}
 {प्राता राज्ञे प्रशंसाम इति बुद्ध्या व्यवस्थिताः}% ७९
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे चारनिरीक्षणं नाम पञ्चपञ्चाशत्तमोऽध्यायः॥५५॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे चारनिरीक्षणं नाम पञ्चपञ्चाशत्तमोऽध्यायः॥५५॥}
 
 \sect{षट्पञ्चाशत्तमोऽध्यायः 5.56}
 
@@ -16601,7 +16601,7 @@
 {इति वाक्यं समाकर्ण्य चारा राममथाब्रुवन्}
 {मेघगम्भीरया वाचा पृच्छन्तं रघुनायकम्}% ९
 
-चारा ऊचुः
+\uvacha{चारा ऊचुः}
 
 \twolineshloka
 {नाथ कीर्तिर्जनान्सर्वान्पावयत्यधुना भुवि}
@@ -16829,7 +16829,7 @@
 {इति वाक्यं समाकर्ण्य रामस्य भरतोऽपतत्}
 {मूर्च्छितः सन्क्षितौ देहे कम्पयुक्तः सबाष्पकः}% ६४
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे भरतवाक्यं नाम षट्पञ्चाशत्तमोऽध्यायः॥५६॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे भरतवाक्यं नाम षट्पञ्चाशत्तमोऽध्यायः॥५६॥}
 
 \sect{सप्तपञ्चाशत्तमोऽध्यायः 5.57}
 
@@ -17118,7 +17118,7 @@
 {पुनरत्र परं वृत्तं शृणुष्व निगदामि तत्}% ६७
 
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रजकप्राग्जन्मकथनन्ना सप्तपञ्चाशत्तमोऽध्यायः॥५७॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रजकप्राग्जन्मकथनन्ना सप्तपञ्चाशत्तमोऽध्यायः॥५७॥}
 
 \sect{अष्टपञ्चाशत्तमोऽध्यायः 5.58}
 
@@ -17447,7 +17447,7 @@
 {सीता तद्वाक्यमाकर्ण्य क्षणादवततार सा}
 {लक्ष्मणेन धृता बाहौ स्खलन्ती पथि कण्टकैः}% ७८
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे जानक्या गङ्गादर्शनं नाम अष्टपञ्चाशत्तमोऽध्यायः॥५८॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे जानक्या गङ्गादर्शनं नाम अष्टपञ्चाशत्तमोऽध्यायः॥५८॥}
 
 \sect{एकोनषष्टितमोऽध्यायः 5.59}
 
@@ -17803,7 +17803,7 @@
 {एष ते कथितो विप्र जानक्याः पुत्रसम्भवः}
 {अतः शृणुष्व यद्वृत्तं वीरबाहुविकृन्तनम्}% ८६
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कुशलवोत्पत्तिकथानकन्नामैकोनषष्टितमोऽध्यायः॥५९॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कुशलवोत्पत्तिकथानकन्नामैकोनषष्टितमोऽध्यायः॥५९॥}
 
 \sect{षष्टितमोऽध्यायः 5.60}
 
@@ -18082,7 +18082,7 @@
 \onelineshloka
 {सुमतिं च मतिश्रेष्ठमुवाच रणकारणे}% ६७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कुशलवयुद्धे सैन्यपराजय कालजित्सेनानीमरणं नाम षष्टितमोऽध्यायः॥६०॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कुशलवयुद्धे सैन्यपराजय कालजित्सेनानीमरणं नाम षष्टितमोऽध्यायः॥६०॥}
 
 \sect{एकषष्टितमोऽध्यायः 5.61}
 
@@ -18340,7 +18340,7 @@
 {तं मूर्च्छितं समाज्ञाय हनूमन्तं महाबलम्}
 {जघान सर्वान्नृपतीञ्छरमोक्षविचक्षणः}% ६२
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हनुमत्पतनन्नामैकषष्टितमोऽध्यायः॥६१॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हनुमत्पतनन्नामैकषष्टितमोऽध्यायः॥६१॥}
 
 \sect{द्विषष्टितमोऽध्यायः 5.62}
 
@@ -18534,7 +18534,7 @@
 {मूर्च्छां प्राप तदा वीरो भूपसायकसंहतः}
 {सङ्गरे सर्ववीराणां शिरोभिः समलङ्कृते}% ४७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लवमूर्च्छा नाम द्विषष्टितमोऽध्यायः॥६२॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लवमूर्च्छा नाम द्विषष्टितमोऽध्यायः॥६२॥}
 
 \sect{त्रिषष्टितमोऽध्यायः 5.63}
 
@@ -18552,7 +18552,7 @@
 {स्वमित्रं शत्रुणा ग्रस्तमिति दुःखसमन्विताः}
 {बालामात्रेऽस्य सीतायै त्वरिताः सन्न्यवेदयन्}% ३
 
-बाला ऊचुः
+\uvacha{बाला ऊचुः}
 
 \twolineshloka
 {मातर्जानकि ते पुत्रो बलाद्वाहमपाहरत्}
@@ -18872,7 +18872,7 @@
 {हाहाकारो महानासीच्छत्रुघ्ने विनिपातिते}
 {जयमापकुशस्तत्र स्वबाहुबलदर्पितः}% ७९
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नमूर्च्छने कुशजयो नाम त्रिषष्टितमोऽध्यायः॥६३॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नमूर्च्छने कुशजयो नाम त्रिषष्टितमोऽध्यायः॥६३॥}
 
 \sect{चतुःषष्टितमोऽध्यायः 5.64}
 
@@ -19202,7 +19202,7 @@
 \onelineshloka
 {तावद्बलं च तत्सर्वं जीवितं रणमूर्द्धनि}% ८०
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सैन्यजीवनं नाम चतुःषष्टितमोऽध्यायः॥६४॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सैन्यजीवनं नाम चतुःषष्टितमोऽध्यायः॥६४॥}
 
 \sect{पञ्चषष्टितमोऽध्यायः 5.65}
 
@@ -19532,7 +19532,7 @@
 {वयं गृहीत्वा तं वाहं प्राप्तास्तव समीपतः}
 {एतदेव मया ज्ञातं तदुक्तं ते पुरोवचः}% ८०
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुमतिनिवेदनं नाम पञ्चषष्टितमोऽध्यायः॥६५॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुमतिनिवेदनं नाम पञ्चषष्टितमोऽध्यायः॥६५॥}
 
 \sect{षट्षष्टितमोऽध्यायः 5.66}
 
@@ -20290,7 +20290,7 @@
 {तच्छ्रुत्वा राघवः प्रीतः पुत्रावाधाय चासने}
 {दृढं तौ परिरभ्याथ सीतां सस्मार वल्लभाम्}% १८२
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रामायणगानं नाम षट्षष्टितमोऽध्यायः॥६६॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रामायणगानं नाम षट्षष्टितमोऽध्यायः॥६६॥}
 
 \sect{सप्तषष्टितमोऽध्यायः 5.67}
 
@@ -20644,7 +20644,7 @@
 {तदा मुनिः प्रहृष्टात्मा देवानाह्वयदद्भुतान्}
 {ते सर्वे तत्क्षणात्प्राप्ताः स्वपरीवारसंवृताः}% ८७
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे यज्ञप्रारम्भो नाम सप्तषष्टितमोऽध्यायः॥६७॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे यज्ञप्रारम्भो नाम सप्तषष्टितमोऽध्यायः॥६७॥}
 
 \sect{अष्टषष्टितमोऽध्यायः 5.68}
 
@@ -20801,7 +20801,7 @@
 {गोघ्नश्चापि सुतघ्नश्च सुरापो गुरुतल्पगः}
 {क्षणात्पूतो भवत्येव नात्र संशयितुं क्षमम्}% ३८
 
-॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे श्रवणपठनपुण्यवर्णनं नामाष्टषष्टितमोऽध्यायः॥६८॥
+{॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे श्रवणपठनपुण्यवर्णनं नामाष्टषष्टितमोऽध्यायः॥६८॥}
 
 इति रामाश्वमेधप्रकरणं समाप्तम्
 
@@ -22386,7 +22386,7 @@
 {आलोक्य राजनगरीं पथि राजपुत्रो राजानमेव पितरं परिचिन्तयानः}
 {सुग्रीवमारुतिविभीषणपुण्यपादसञ्चारपूतभवनं प्रविवेश रामः}% ३६९
 
-॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वरसंवाद रामस्यायोध्याप्रवेशो नाम द्विचत्वारिंशदधिकद्विशततमोऽध्यायः॥२४२॥
+{॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वरसंवाद रामस्यायोध्याप्रवेशो नाम द्विचत्वारिंशदधिकद्विशततमोऽध्यायः॥२४२॥}
 
 \sect{त्रिचत्वारिंशदधिक द्विशततमोऽध्यायः 6.243}
 
@@ -22617,7 +22617,7 @@
 {इत्थं विसृष्टाः खलु ते च सर्वे सुखं तदा जग्मुरतीवहृष्टाः}
 {परं पठन्तः स्तवमीश्वरोक्तं रामं स्मरन्तो वरविश्वरूपम्}% ५३
 
-॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वर संवादे विश्वदर्शनं नाम त्रिचत्वारिंशदधिकद्विशततमोऽध्यायः॥२४३॥
+{॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वर संवादे विश्वदर्शनं नाम त्रिचत्वारिंशदधिकद्विशततमोऽध्यायः॥२४३॥}
 
 \sect{चतुश्चत्वारिंशदधिक द्विशततमोऽध्यायः 6.244}
 
@@ -23065,6 +23065,6 @@
 {धन्योऽस्म्यहं त्वया देवि रामचन्द्रस्य कीर्त्तनात्}
 {किमन्यच्छ्रोतुकामासि तद्ब्रवीमि वरानने}% ९५
 
-॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वर संवादे श्रीरामचरितकथनं नाम चतुश्चत्वारिंशदधिकद्विशततमोऽध्यायः॥२४४॥
+{॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वर संवादे श्रीरामचरितकथनं नाम चतुश्चत्वारिंशदधिकद्विशततमोऽध्यायः॥२४४॥}
 
 
